[package]
name = "stellaria"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Aravindaksha Balaji <aravindakshabalaji@gmail.com>"]
description = "An ergonomic Rust library for the NASA Web APIs"
repository = "https://github.com/aravindakshabalaji/stellaria/"
documentation = "https://docs.rs/stellaria/"
readme = "README.md"
keywords = ["nasa", "space", "api", "apod", "neows"]
categories = ["api-bindings", "science", "web-programming::http-client"]

exclude = [
    "tests/*",
    ".env",
]

[lib]
name = "stellaria"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"]  }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
